@@ -16,6 +16,15 @@
 	* stdio-common/vfprintf.c (process_string_arg): Revert
 	2000-07-22 change.
 
+2012-07-06  Andreas Schwab  <schwab@linux-m68k.org>
+
+	[BZ #14042]
+	* sysdeps/powerpc/powerpc32/ppc-mcount.S [SHARED]: Don't use PLT
+	for call to __mcount_internal.
+	* sysdeps/powerpc/powerpc32/Makefile (sysdep_routines)
+	(shared-only-routines) [$(subdir) = gmon]: Add compat-ppc-mcount.
+	* sysdeps/powerpc/powerpc32/compat-ppc-mcount.S: New file.
+
 2011-09-28  Jonathan Nieder  <jrnieder@gmail.com>
 
 	* stdio-common/Makefile (tst-sprintf-ENV): Set environment
